EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/07/2009==
Rogean: #motd now updates clients instantly serverwide.

==09/30/2009==
Rogean: Fixed possible crash in Mob::CheckWillAggro();
Rogean: Temporarily Disabled Fear MaxLevel Check causing a crash.
Trevius: Added Quest Commands quest::playerfeature(feature, setting) and quest::npcfeature(feature, setting) - See Wiki for details on usage.
Trevius: Added Quest Objects GetHairColor(), GetBeardColor(), GetEyeColor1(), GetEyeColor2(), GetHairStyle(), GetLuclinFace(), GetBeard(), GetDrakkinHeritage(), GetDrakkinTattoo(), and GetDrakkinDetails().

==09/29/2009==
Rogean: Direct Heal and Rune Aggro are now based off the mana cost of the spell.
Rogean: HoT Aggro is now based off the per-tic heal amount, when the spell lands.
Rogean: Fixed several issues with focus effects. Beneficial Hate Reduction Focus should now work.
Rogean: Fixed AA Spell Casting Subtlety not applying to heal aggro. Also changed to correct values.

==09/27/2009==
cavedude: (Shin Noir) Implemented Wizard AA: Teleport Bind.
cavedude: (tsowl) GMs will no longer need a key for locked portal doors.
cavedude: (tsowl) Fix for shared and normal bank dupes.
cavedude: (Nachyoz) Corrected a bug preventing $faction from reporting correct values.
cavedude: (drakelord) Runes will now block stuns, provided the damage does not exceed the rune's limit.

==09/23/2009==
gaeorn: small fix to pathing code for 64bit
gaeorn: a few changes to makefiles to clean things up

==09/20/2009==
Rogean: Small (Big?) Aggro change, melee swings now generate same aggro regardless of hit/miss/dodged.
Rogean: Aggro Formula changed to weapon_damage + dmg bonus + elemental dmg + (if applicable) bane dmg.

==09/18/2009==
KLS: Fixed an error with Perl::Group::GetMember(index) added Perl::Raid::GetMember(index).