@@ -246,6 +246,7 @@ RULE_INT ( Combat, DragonPunchBonus, 20) //% Modifier that this skill gets to st
 RULE_INT ( Combat, EagleStrikeBonus, 15) //% Modifier that this skill gets to str and skill bonuses
 RULE_INT ( Combat, TigerClawBonus, 10) //% Modifier that this skill gets to str and skill bonuses
 RULE_INT ( Combat, RoundKickBonus, 5) //% Modifier that this skill gets to str and skill bonuses
+RULE_BOOL ( Combat, ProcTargetOnly, true) //true = procs will only affect our target, false = procs will affect all of our targets
 RULE_CATEGORY_END()
 
 RULE_CATEGORY( NPC )
